Fix Like btn and See Reviews btn on Favourites page
Resize the outer div of the like button so that it doesn't overlap the See Reviews button, allowing it to be clicked.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1083,6 +1083,8 @@ The following code is based upon this source:
     bottom: 0; 
     right: 0; 
     left: 75%;
+    width: 142px;
+    height: 54px;
 }
 
 .floating-add-btn {
@@ -1101,6 +1103,8 @@ The following code is based upon this source:
     bottom: 0; 
     right: 0; 
     left: 75%;
+    height: 30px;
+    width: 90px;
 }
 
 .like-inner {
